Second Prototype * the user can create lists * the user can edit lists (add, rename, check and move elements) * rework project structure * update codestyle * fix many bugs * add simple async server connection (check connection) * adding some comments

--- a/Android_Client/OpenSyncedLists/app/src/main/res/values/strings.xml
+++ b/Android_Client/OpenSyncedLists/app/src/main/res/values/strings.xml
@@ -13,4 +13,8 @@
     <string name="menu_export_more">Weitere Export Formate..</string>
     <string name="menu_about">Über</string>
 
+
+    <!-- Change before publish! -->
+    <string name="preference_file_key">asdkjbIG(CTDchabscTEc89iuHC87C</string>
+
 </resources>
