--- a/Android_Client/OpenSyncedLists/app/src/main/res/values/strings.xml
+++ b/Android_Client/OpenSyncedLists/app/src/main/res/values/strings.xml
@@ -30,11 +30,11 @@
 
     <!-- Change before publish!  -->
     <string name="preference_file_key">asdkjbIG(CTDchabscTEc89iuHC87C</string>
-    <string name="title_activity_settings">SettingsActivity</string>
+    <string name="title_activity_settings">Einstellungen</string>
 
     <!-- Preference Titles -->
-    <string name="general_header">General</string>
-    <string name="sync_header">Sync</string>
+    <string name="general_header">Allgemein</string>
+    <string name="sync_header">Synchronisation</string>
 
     <!-- General Preferences -->
     <string name="design_mode_title">Design</string>
@@ -46,7 +46,26 @@
         Pfeilen \"Hoch\"/\"Runter\" verschoben</string>
 
     <!-- Sync Preferences -->
-    <string name="sync_title">Sync lists periodically</string>
-    <string name="default_server_title">Default server</string>
+    <string name="sync_title">Synchronisere Listen automatisch</string>
+    <string name="default_server_title">Standard Server</string>
+
+    <!-- Listen Einstellungen  -->
+    <string name="list_settings_title">Listen Einstellungen</string>
+    <string name="list_pref_check_option_title">Haken für jedes Element</string>
+    <string name="list_pref_name_title">Listen Name</string>
+    <string name="list_pref_server_name">Server Hostname</string>
+    <string name="list_pref_sync_title">Automatische Synchronisation</string>
+    <string name="list_pref_sync_on">Aktiviert</string>
+    <string name="list_pref_sync_off">Deaktiviert</string>
+    <string name="list_pref_checked_list_title">Liste für abgehakte Elemente</string>
+    <string name="list_pref_checked_list_summary">Extra Liste für abgehakte
+        Elemente am Ende der Liste</string>
+    <string name="list_pref_delete_btn_title">Liste löschen</string>
+    <string name="list_pref_delete_btn_summary">Achtung! Die Liste wird nur
+        lokal gelöscht!</string>
+    <string name="list_pref_delete_online_btn_title">Liste
+        online löschen</string>
+    <string name="list_pref_delete_online_btn_summary">Achtung! Die Liste wird
+        auf dem Server gelöscht!</string>
 
 </resources>
