--- a/Android_Client/OpenSyncedLists/app/src/main/res/values/strings.xml
+++ b/Android_Client/OpenSyncedLists/app/src/main/res/values/strings.xml
@@ -12,10 +12,10 @@
 
     <string name="menu_list_settings">Listen Einstellungen</string>
     <string name="menu_list_clear">Listen leeren</string>
-    <string name="menu_export_share">Teilen</string>
+    <string name="menu_export_share">Als Url/Link teilen</string>
     <string name="menu_export_share_md">Als Markdown/Text teilen</string>
-    <string name="menu_export_qr">Als QR-Code exportieren</string>
-    <string name="menu_export_more">Weitere Export Formate..</string>
+    <string name="menu_export_qr">Als QR-Code teilen</string>
+    <string name="menu_export_list_json">Liste exportieren</string>
     <string name="menu_about">Über</string>
 
     <!--     SyncedList          -->
