--- a/Android_Client/OpenSyncedLists/app/src/main/res/values-de/strings.xml
+++ b/Android_Client/OpenSyncedLists/app/src/main/res/values-de/strings.xml
@@ -31,11 +31,13 @@
     <string name="share_after_link">\n\nDu solltest den Link nicht im Browser öffnen, sondern mit der OpenSyncedLists App!</string>
 
     <!--     About               -->
-    <string name="text_about">Enstanden während des Moduls "Mobile
-        Systeme" an der Technischen Hochschule Ostwestfalen-Lippe.\n\n\n
-        Entwickelt von Etienne Schmidt\n\n
+    <string name="text_about">Enstanden während des Moduls \"Mobile
+        Systeme\" an der Technischen Hochschule Ostwestfalen-Lippe.<![CDATA[<br/><br/>]]>
+        Entwickelt von Etienne Schmidt.<![CDATA[<br/><br/>]]>
+        Webseite zur App: <![CDATA[<a href="https://schmidt-systems.eu/docs/opensyncedlists">auf Schmidt-Systems.eu</a><br/><br/>]]>
         Lizensiert unter <![CDATA[<a href="https://gitlab.com/gladion136/opensyncedlists/-/raw/main/LICENSE">GNU GPL v3</a>]]></string>
 
+    <string name="text_about_others">Es wurden Icons von <![CDATA[<a href="https://www.freepik.com" title="Freepik">Freepik</a>, veröffentlicht auf <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>]]>, verwendet und editiert.</string>
     <string name="title_activity_settings">Einstellungen</string>
 
     <!-- Preference Titles -->
