--- a/Android_Client/OpenSyncedLists/app/src/main/res/values/strings.xml
+++ b/Android_Client/OpenSyncedLists/app/src/main/res/values/strings.xml
@@ -70,4 +70,5 @@
     <string name="create_list_cancel">Cancel</string>
     <string name="no_name_entered">Please enter a name first.</string>
     <string name="cant_import_file">Can\'t import file!</string>
+    <string name="text_about_others">Most assets are from <![CDATA[<div><a href="https://www.freepik.com" title="Freepik">Freepik</a> published on <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>]]> got used and changed.</string>
 </resources>
