--- a/Android_Client/OpenSyncedLists/app/src/main/res/values-de/strings.xml
+++ b/Android_Client/OpenSyncedLists/app/src/main/res/values-de/strings.xml
@@ -44,7 +44,7 @@
     <string name="eT_new_element">Neues Element</string>
     <string name="list_element_isolator_tV">Abgehakte Elemente:</string>
     <string name="share_before_name">Importiere die Liste \"</string>
-    <string name="share_after_name">\" in OpenSyncedLists mit dem folgendem Link:\n\n</string>
+    <string name="share_after_name">\" in OpenSyncedLists mit folgendem Link:\n\n</string>
     <string name="share_after_link">\n\nDu solltest den Link nicht im Browser öffnen, sondern mit der OpenSyncedLists App!</string>
 
     <!--     About               -->
