--- a/Android_Client/OpenSyncedLists/app/src/main/res/values/strings.xml
+++ b/Android_Client/OpenSyncedLists/app/src/main/res/values/strings.xml
@@ -73,7 +73,7 @@
     <string name="list_pref_delete_online_btn_title">Delete list online and local</string>
     <string name="list_pref_delete_online_btn_summary">Warning! The list got deletet local and online. If others devices has also access they could still upload it.</string>
     <string name="scroll_list_title">Scroll list</string>
-    <string name="scroll_list_summary">Scroll list after moving element</string>
+    <string name="scroll_list_summary">Scroll list after edit element</string>
     <string name="unexpected_error">Error: Something wrent wrong.. Please try it again.</string>
     <string name="no_connection">No connection to server!</string>
     <string name="no_app_for_intent_installed">You have no app installed for this event..</string>
