Feature: Add jump buttons option to list settings

--- a/Android_Client/OpenSyncedLists/app/src/main/res/values/strings.xml
+++ b/Android_Client/OpenSyncedLists/app/src/main/res/values/strings.xml
@@ -99,4 +99,6 @@
     <string name="sourcecode_webpage" translatable="false">https://gitlab.com/gladion136/opensyncedlists</string>
     <string name="defaults_list">Default list settings</string>
     <string name="defaults_list_summary">Will be applied when creating a new list</string>
+    <string name="list_pref_jump_buttons_title">Jump Buttons</string>
+    <string name="list_pref_jump_buttons_summary">Display jump buttons, set range in global settings</string>
 </resources>
