--- a/Android_Client/OpenSyncedLists/app/src/main/res/values-de/strings.xml
+++ b/Android_Client/OpenSyncedLists/app/src/main/res/values-de/strings.xml
@@ -28,7 +28,7 @@
     <string name="menu_import">Liste/n importieren</string>
     <string name="menu_settings">Einstellungen</string>
 
-    <string name="menu_list_settings">Listen Einstellungen</string>
+    <string name="menu_list_settings">Einstellungen für diese Liste</string>
     <string name="menu_list_clear">Liste leeren</string>
     <string name="menu_export_share">Als Url/Link teilen</string>
     <string name="menu_export_share_md">Als Markdown/Text teilen</string>
