--- a/Android_Client/OpenSyncedLists/app/src/main/res/values-en/strings.xml
+++ b/Android_Client/OpenSyncedLists/app/src/main/res/values-en/strings.xml
@@ -23,7 +23,7 @@
     <string name="menu_export">Export lists</string>
     <string name="menu_import">Import list/s</string>
     <string name="menu_settings">Settings</string>
-    <string name="menu_list_settings">List settings</string>
+    <string name="menu_list_settings">Settings of this list</string>
     <string name="menu_list_clear">Clear list</string>
     <string name="menu_export_share">Share as link</string>
     <string name="menu_export_share_md">Share as Markdown/Text</string>
