feat: list overview and text/plain import support
Signed-off-by: Etienne Schmidt <gladion136@googlemail.com>

--- a/Android_Client/OpenSyncedLists/app/src/main/res/values/strings.xml
+++ b/Android_Client/OpenSyncedLists/app/src/main/res/values/strings.xml
@@ -107,4 +107,6 @@
     <string name="import_list_url_yes">Ok</string>
     <string name="import_list_url_cancel">Cancel</string>
     <string name="search">Search</string>
+    <string name="action_overview_title">Show overview</string>
+    <string name="unknown_file_type">Unknown file type</string>
 </resources>
