feat: add play store rating intent
Signed-off-by: Etienne Schmidt <gladion136@googlemail.com>

--- a/Android_Client/OpenSyncedLists/app/src/main/res/values-de/strings.xml
+++ b/Android_Client/OpenSyncedLists/app/src/main/res/values-de/strings.xml
@@ -125,4 +125,5 @@
     <string name="import_list_url_yes">Ok</string>
     <string name="import_list_url_cancel">Abbrechen</string>
     <string name="search">Suchen</string>
+    <string name="menu_review_on_playstore">Im Play Store bewerten</string>
 </resources>
