--- a/Android_Client/OpenSyncedLists/app/src/main/res/values-en/strings.xml
+++ b/Android_Client/OpenSyncedLists/app/src/main/res/values-en/strings.xml
@@ -101,4 +101,5 @@
     <string name="import_list_url_yes">Ok</string>
     <string name="import_list_url_cancel">Cancel</string>
     <string name="search">Search</string>
+    <string name="menu_review_on_playstore">Rate in Play Store</string>
 </resources>
